fix responsive url bar on mobile

--- a/client/src/containers/App.scss
+++ b/client/src/containers/App.scss
@@ -6,6 +6,9 @@
 body {
   background-color: #f2f2f2;
   font-family: 'Barlow Condensed', sans-serif;
+  .main-page {
+    height: 100vh;
+  }
   .main-body {
     width: 80%;
     margin: 50px auto 0px auto;
